# bujuan

./: LICENSE  README.md  pubspec.yaml  tea.yaml  version.json
android/: build.gradle  gradle.properties  key.properties  settings.gradle
android/app/: build.gradle
assets/images/: update.json
assets/lottie/: empty.json  personal_character.json
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  ffi.dart  ffi_web.dart  main.dart
lib/api/: answer.dart  module.dart  netease_cloud_music.dart
lib/bottom_bar/: bottom_bar_controller.dart  bottom_bar_view.dart  lyric_view.dart
lib/common/: app.dart  audio_handler.dart  audio_player_handler.dart  audio_player_utils.dart  bujuan_audio_handler.dart  bujuan_audio_handler_bak.dart  just_audio_modify.dart  my_audio_handler.dart  storage.dart  test_audio_handler.dart  test_cache.dart
lib/entity/: ablum_newest.dart  album_details.dart  banner_entity.dart  cloud_entity.dart  cookie_entity.dart  dj_recommend.dart  fm_entity.dart  heart.dart  highquality_entity.dart  like_song_list_entity.dart  local_sheet.dart  login_entity.dart  lyric_entity.dart  music_talk.dart  mv_player_entity.dart  new_song_entity.dart  node.dart  personal_entity.dart  play_history_entity.dart  program_detail.dart  save_cookie_entity.dart  search_album.dart  search_hot_entity.dart  search_mv_entity.dart  search_sheet_entity.dart  search_singer_entity.dart  search_song_entity.dart  sheet_by_classify.dart  sheet_details_entity.dart  singer_album.dart  singer_entity.dart  singer_song.dart  song_bean_entity.dart  song_de_entity.dart  song_talk_entity.dart  today_song_entity.dart  top_artists_entity.dart  top_entity.dart  top_mv_entity.dart  tree.dart  (+5 more)
lib/find/: find_controller.dart  find_view.dart
lib/generator/: .gitignore  index.js  package.json
lib/global/: global_binding.dart  global_config.dart  global_controller.dart  global_error_view.dart  global_loding_view.dart  global_state_view.dart  global_theme.dart
lib/home/: home_binding.dart  home_controller.dart  home_view.dart
lib/login/: login_binding.dart  login_controller.dart  login_view.dart
lib/music_bottom_bar/: music_bottom_bar_controller.dart  music_bottom_bar_view.dart
lib/pages/: base_view.dart  splash_page.dart
lib/play_list/: play_list_controller.dart  play_list_view.dart
lib/play_view/: default_view.dart
lib/profile/: profile_binding.dart  profile_controller.dart  profile_view.dart
lib/routes/: app_outes.dart  app_pages.dart  app_routes.dart  router.dart  router.gr.dart
lib/search/: search_view.dart
lib/setting/: setting_binding.dart  setting_controller.dart  setting_view.dart
lib/sheet_classify/: sheet_classify_binding.dart  sheet_classify_controller.dart  sheet_classify_view.dart
lib/sheet_info/: sheet_info_binding.dart  sheet_info_controller.dart  sheet_info_view.dart  sheet_loading_view.dart
lib/splash/: splash_binding.dart  splash_controller.dart  splash_view.dart
lib/today/: today_binding.dart  today_controller.dart  today_view.dart
lib/top/: top_binding.dart  top_view.dart
lib/user/: user_controller.dart  user_view.dart
linux/: CMakeLists.txt  my_application.cc
native/: .gitignore  README.md  rust-toolchain.toml
native/engine-base/: Cargo.toml
native/engine-base/src/: executor.rs  interface.rs
native/engines/migu/: Cargo.toml
native/engines/migu/examples/: migu_test.rs
native/engines/pyncm/: Cargo.toml
native/engines/pyncm/src/: lib.rs
native/request/: Cargo.toml
native/request/src/: json.rs
native/rest-api/: Cargo.toml  config.toml
native/rest-api/src/: config_reader.rs  controllers.rs  retrieve.rs  schema.rs
native/rest-api/src/controllers/: search.rs
native/rest-api/src/executor/: context.rs  engine.rs
native/rest-api/src/schema/v1/: error.json  index.json
native/selector/: Cargo.toml
native/selector/src/: lib.rs
native/test-utils/: Cargo.toml
native/test-utils/src/: lib.rs
rust/: .gitignore  .gitpod.yml  Cargo.toml  rustfmt.toml
rust/.github/workflows/: napi-build.yml
rust/api-utils/: Cargo.toml  README.md
rust/api-utils/src/: executor.rs  lib.rs
rust/crypto/: Cargo.toml
rust/crypto/src/: base64.rs  eapi.rs  lib.rs  md5.rs
rust/engine-base/src/: lib.rs
rust/engine-demo/: Cargo.toml
rust/engine-demo/src/: main.rs
rust/engines/bilibili/src/: api.rs
rust/engines/joox/: Cargo.toml
rust/engines/kugou/: Cargo.toml
rust/engines/kuwo/: Cargo.toml  KuwoMusicApi.LICENSE
rust/engines/migu/src/: lib.rs  types.rs
rust/engines/qq/: Cargo.toml
rust/engines/qq/examples/: qq_test.rs
rust/engines/qq/src/: api.rs
rust/engines/qq/src/api/: identifier.rs
rust/engines/ytdl/: Cargo.toml
rust/engines/ytdl/src/: lib.rs
rust/napi/: Cargo.toml  README.md  index.d.ts  package.json
rust/napi/demo/: demo.js
rust/napi/npm/android-arm-eabi/: README.md  package.json
rust/napi/npm/darwin-arm64/: README.md
rust/napi/npm/darwin-x64/: README.md  package.json
rust/napi/npm/freebsd-x64/: package.json
rust/napi/npm/linux-arm-gnueabihf/: README.md  package.json
rust/napi/npm/linux-arm64-musl/: README.md
rust/napi/npm/linux-x64-musl/: package.json
rust/napi/npm/win32-arm64-msvc/: README.md
rust/napi/npm/win32-x64-msvc/: README.md  package.json
rust/napi/src/: lib.rs
rust/native/: Cargo.toml
rust/native/native.xcodeproj/: project.pbxproj
rust/native/native.xcodeproj/xcuserdata/sixbug.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
rust/request/src/: ext.rs  lib.rs
rust/rest-api/: README.md
rust/rest-api/docs/: api.md  configure.md
rust/rest-api/src/: executor.rs  main.rs
rust/rest-api/src/controllers/: retrieve.rs
rust/rest-api/src/executor/: retrieve.rs  search.rs
rust/rest-api/src/schema/v1/: search.json
rust/types/: Cargo.toml
starry/: .metadata  README.md  pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+837 files in other folders)
