[package]
name = "unm_engine"
description = "The engine base for UnblockNeteaseMusic, including the executor and the Engine trait."
license = "LGPL-3.0-or-later"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.63"
futures = "0.3.25"
log = "0.4.17"
thiserror = "1.0.40"
unm_types = { version = "0.4.0", path = "../types" }
