[package]
name = "unm_request"
description = "The request-related methods for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.4.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
cached = "0.42.0"
http = "0.2.9"
reqwest = { version = "0.11.14", features = [
    "json",
    "brotli",
    "deflate",
    "gzip",
    "native-tls-vendored",
    "socks",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
url = "2.3.1"

[dev-dependencies]
once_cell = "1.17.0"
