[package]
name = "unm_selector"
description = "The algorithm for UnblockNeteaseMusic, determining what Song to return."
license = "LGPL-3.0-or-later"
version = "0.4.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unm_types = { version = "0.4.0", path = "../types" }

[dev-dependencies]
once_cell = "1.17.0"
serde = "1.0.152"
serde_json = "1.0.95"
