[package]
name = "unm_crypto"
description = "The crypto toolkit for UnblockNeteaseMusic."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
license = "LGPL-3.0-only"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
concat-string = "1.0.1"
faster-hex = "0.6.1"
log = "0.4.17"
md5 = "0.7.0"
once_cell = "1.17.0"
openssl = { version = "0.10.49", features = ["vendored"] }

regex = "1.7.1"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
smallvec = { version = "1.10.0", features = ["union", "const_generics", "const_new"] }

thiserror = "1.0.40"
url = "2.3.1"

[features]

