[package]
name = "unm_engine_demo"
description = "Demonstrate how engines work in UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
mimalloc = "0.1.34"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
unm_api_utils = { version = "0.4.0", path = "../api-utils" }
unm_test_utils = { version = "0.1.0", path = "../test-utils" }
unm_types = { version = "0.4.0", path = "../types" }
