[package]
edition = "2021"
name = "unm_napi"
description = "The N-API for UnblockNeteaseMusic (Rust)."
license = "LGPL-3.0-or-later"
version = "0.0.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
publish = false
include = ["src/**/*", "README.md", "build.rs"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mimalloc = "0.1.34"
napi = { version = "2.11.2", features = ["full"] }
napi-derive = "2.11.1"
simple_logger = "4.0.0"
unm_api_utils = { version = "0.4.0", path = "../api-utils" }
unm_engine = { version = "0.4.0", path = "../engine-base" }
unm_types = { version = "0.4.0", path = "../types" }

[build-dependencies]
napi-build = "2.0.1"
