[package]
name = "unm_types"
description = "The type definitions for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.4.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
reqwest = { version = "0.11.14", features = ["native-tls-vendored"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.40"
typed-builder = "0.11.0"
