[package]
name = "unm_engine_migu"
description = "The Migu engine for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.4.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../../README.md"
edition = "2021"
include = ["src/**/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.63"
http = "0.2.9"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
unm_engine = { version = "0.4.0", path = "../../engine-base" }
unm_request = { version = "0.4.0", path = "../../request" }
unm_selector = { version = "0.4.0", path = "../../selector" }
unm_types = { version = "0.4.0", path = "../../types" }
url = "2.3.1"

[dev-dependencies]
reqwest = { version = "0.11.14", features = ["native-tls-vendored"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
unm_test_utils = { path = "../../test-utils" }
