[package]
name = "unm_engine_pyncm"
description = "The PyNCM engine for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.4.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../../README.md"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.63"
http = "0.2.9"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
unm_engine = { version = "0.4.0", path = "../../engine-base" }
unm_request = { version = "0.4.0", path = "../../request" }
unm_types = { version = "0.4.0", path = "../../types" }
url = "2.3.1"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
unm_test_utils = { path = "../../test-utils" }
