[package]
name = "unm_engine_ytdl"
description = "The YtDl (youtube-dl, yt-dlp, …) engine for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.4.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../../README.md"
edition = "2021"
include = ["src/lib.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.63"
concat-string = "1.0.1"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.25.0", features = ["process"] }
unm_engine = { version = "0.4.0", path = "../../engine-base" }
unm_types = { version = "0.4.0", path = "../../types" }
winapi = "0.3.9"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
unm_test_utils = { path = "../../test-utils" }
